analyzer/tests/snapshots/errors__assign_call.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: invalid assignment target
  ┌─ [snippet]:3:3
  │
3 │   self.f() = 10
  │   ^^^^^^^^
  │
  = The left side of an assignment can be a variable name, attribute, subscript, or tuple.


