analyzer/tests/snapshots/errors__aug_assign_non_numeric.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


TypeError on line 5
pub def f():
  a: u256 = 1
  b: bool = true
  [31ma += b[0m
