analyzer/tests/snapshots/errors__bad_map4.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` expects 2 arguments, but 1 was provided
  ┌─ [snippet]:3:6
  │
3 │   x: map<y>
  │      ^^^ - supplied 1 argument
  │      │    
  │      expects 2 arguments


