analyzer/tests/snapshots/errors__bad_map6.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` key and value must be types
  ┌─ [snippet]:3:10
  │
3 │   x: map<10, 20>
  │          ^^ this should be a type name

error: `map` key and value must be types
  ┌─ [snippet]:3:14
  │
3 │   x: map<10, 20>
  │              ^^ this should be a type name


